WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270332
[WPE] WPE Platform: Crashes due to failure to track touch points
https://bugs.webkit.org/show_bug.cgi?id=270332
Summary
[WPE] WPE Platform: Crashes due to failure to track touch points
Lauro Moura
Reported
2024-02-29 21:40:01 PST
By default, WTF::HashMap disallows 0 (zero) as a valid key, as currently we do in WPEWaylandSeat.h. This conflicts with using 0 as the ID of the first touchpoint. As such, the current code is treating each event as a new point, filing up the reserved space, leading to crashes. Also, as we start tracking a point in the down event, we should ignore it after the up event.
Attachments
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2024-02-29 22:00:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25336
EWS
Comment 2
2024-03-01 07:09:58 PST
Committed
275553@main
(c79050dd5ea4): <
https://commits.webkit.org/275553@main
> Reviewed commits have been landed. Closing PR #25336 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug