[WPE] WPE Platform: Crashes due to failure to track touch points https://bugs.webkit.org/show_bug.cgi?id=270332

Reviewed by Carlos Garcia Campos.

- Use HashMap trait that allows zero as a valid key
- Stop tracking points after receiving the 'up' event

* Source/WebKit/WPEPlatform/wpe/wayland/WPEWaylandSeat.cpp:
* Source/WebKit/WPEPlatform/wpe/wayland/WPEWaylandSeat.h:

Canonical link: https://commits.webkit.org/275553@main